<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="onei.villaclara.cu.aec.ContactActivity">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_mail"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="60dp"
                    android:layout_gravity="left"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/email"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/email"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/co_email"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textColor="#FFFFFF" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_tel1"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:paddingLeft="60dp"
                    android:layout_gravity="left"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tel"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/call"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/co_tel"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textColor="#FFFFFF" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_fax1"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="60dp"
                    android:layout_gravity="left"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/phone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/co_fax"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_web1"
                    android:textSize="20sp"
                    android:paddingLeft="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="left"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/webpage"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/navegador"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/co_web"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:autoLink="web"
                        android:textColorLink="#FFFFFF"
                        android:layout_marginBottom="5dp"
                        android:textSize="18dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_direccion"
                    android:textSize="20sp"
                    android:paddingLeft="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="left|center"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ubicacion"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/co_address"
                        android:gravity="left|center"
                        android:textColor="#FFFFFF"
                        android:textSize="18dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/co_redes"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="left"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fb"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/fb"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/co_facebook"
                        android:gravity="left|center"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:autoLink="web"
                        android:textColorLink="#FFFFFF"
                        android:textColor="#FFFFFF" />

                </LinearLayout>


                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/twi"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/twitter"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/co_twitter"
                        android:gravity="left|center"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:autoLink="web"
                        android:textColorLink="#FFFFFF"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>-->

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
